--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -62,4 +62,10 @@
         android:defaultValue="true"
         settings:allowDividerAbove="true"/>
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="charging_animation"
+        android:title="@string/charging_animation_title"
+        android:summary="@string/charging_animation_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
