--- a/res/xml/statusbar_clock_settings.xml
+++ b/res/xml/statusbar_clock_settings.xml
@@ -56,9 +56,8 @@
         android:min="4"
         android:defaultValue="14"/>
 
-    <ListPreference
+    <com.ion.ionizer.preferences.SystemSettingListPreference
         android:key="status_bar_clock_font_style"
-        android:dialogTitle="@string/status_bar_clock_font_style_title"
         android:title="@string/status_bar_clock_font_style_title"
         android:entries="@array/lock_clock_fonts_entries"
         android:entryValues="@array/lock_clock_fonts_values"
@@ -98,7 +97,7 @@
         android:entryValues="@array/clock_date_style_values"
         android:dependency="clock_date_display" />
 
-    <ListPreference
+    <com.ion.ionizer.preferences.SystemSettingListPreference
         android:key="clock_date_format"
         android:title="@string/clock_date_format"
         android:entries="@array/clock_date_format_entries_values"
