--- a/res/xml/ion_settings_volume.xml
+++ b/res/xml/ion_settings_volume.xml
@@ -75,4 +75,18 @@
 
     <PreferenceCategory android:key="divider" />
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+       android:key="power_menu_bg"
+       android:title="@string/power_menu_bg_title"
+       android:summary="@string/power_menu_bg_summary"
+       android:defaultValue="false" />
+
+    <com.ion.ionizer.preferences.SystemSettingListPreference
+        android:key="power_menu_bg_style"
+        android:title="@string/power_menu_bg_style_title"
+        android:entries="@array/power_menu_bg_style_entries"
+        android:entryValues="@array/power_menu_bg_style_values"
+        android:dependency="power_menu_bg"
+        android:defaultValue="0" />
+
 </PreferenceScreen>
