Accent Tinted and Blurred filter for media coverart

--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -607,6 +607,7 @@
         <item>@string/lockscreen_cover_filter_tint</item>
         <item>@string/lockscreen_cover_filter_blur</item>
         <item>@string/lockscreen_cover_filter_grayblur</item>
+        <item>@string/lockscreen_cover_filter_tinted_blur</item>
     </string-array>
     <string-array name="lockscreen_cover_filter_values" translatable="false">
         <item>0</item>
@@ -614,6 +615,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- Lockscreen clock styles -->
