--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -13,11 +13,18 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
 	android:title="@string/gaming_mode_title">
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="gaming_mode_master_switch"
+        android:title="@string/gaming_mode_master_title"
+        android:summary="@string/gaming_mode_master_summary"
+        android:defaultValue="true" />
+
     <!-- HeadsUP -->
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_headsup_toggle"
         android:title="@string/gaming_mode_headsup_title"
         android:summary="@string/gaming_mode_headsup_summary"
+        android:dependency="gaming_mode_master_switch"
         android:defaultValue="true" />
 
     <!-- Hardware keys -->
@@ -25,6 +32,7 @@
         android:key="gaming_mode_hw_keys_toggle"
         android:title="@string/gaming_mode_hardware_keys_title"
         android:summary="@string/gaming_mode_hardware_keys_summary"
+        android:dependency="gaming_mode_master_switch"
         android:defaultValue="false" />
 
     <!-- Manual brightness -->
@@ -32,6 +40,7 @@
         android:key="gaming_mode_manual_brightness_toggle"
         android:title="@string/gaming_mode_brightness_title"
         android:summary="@string/gaming_mode_brightness_summary"
+        android:dependency="gaming_mode_master_switch"
         android:defaultValue="true" />
 
     <com.ion.ionizer.preferences.SystemSettingListPreference
@@ -40,6 +49,7 @@
         android:entries="@array/gaming_mode_ringer_entries"
         android:entryValues="@array/gaming_mode_ringer_values"
         android:defaultValue="0"
+        android:dependency="gaming_mode_master_switch"
         android:summary="%s" />
 
     <com.ion.ionizer.preferences.SystemSettingListPreference
@@ -48,6 +58,7 @@
         android:entries="@array/gaming_mode_notifications_entries"
         android:entryValues="@array/gaming_mode_notifications_values"
         android:defaultValue="3"
+        android:dependency="gaming_mode_master_switch"
         android:summary="%s" />
 
     <!-- Dynamic gaming mode -->
@@ -55,6 +66,7 @@
         android:key="gaming_mode_dynamic_state"
         android:title="@string/gaming_mode_dynamic_title"
         android:summary="@string/gaming_mode_dynamic_summary"
+        android:dependency="gaming_mode_master_switch"
         android:defaultValue="false" />
 
     <!-- App picker activity for gaming mode -->
@@ -65,7 +77,8 @@
             android:key="add_gamingmode_packages"
             android:icon="@drawable/ic_menu_add"
             android:title="@string/add_gaming_mode_package_title"
-            android:summary="@string/add_gaming_mode_package_summary" />
+            android:summary="@string/add_gaming_mode_package_summary"
+            android:dependency="gaming_mode_master_switch" />
     </PreferenceCategory>
 
 </PreferenceScreen>
