--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -32,7 +32,7 @@
         android:key="gaming_mode_hw_keys_toggle"
         android:title="@string/gaming_mode_hardware_keys_title"
         android:summary="@string/gaming_mode_hardware_keys_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <!-- Manual brightness -->
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
@@ -41,12 +41,13 @@
         android:summary="@string/gaming_mode_brightness_summary"
         android:defaultValue="true" />
 
-    <!-- DND -->
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="gaming_mode_enter_dnd"
-        android:title="@string/gaming_mode_dnd_title"
-        android:summary="@string/gaming_mode_dnd_summary"
-        android:defaultValue="true" />
+    <com.ion.ionizer.preferences.SystemSettingListPreference
+        android:key="gaming_mode_ringer_mode"
+        android:title="@string/gaming_mode_ringer_title"
+        android:entries="@array/gaming_mode_ringer_entries"
+        android:entryValues="@array/gaming_mode_ringer_values"
+        android:defaultValue="0"
+        android:summary="%s" />
 
     <!-- Max media volume -->
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
