Add Accent based Custom Text Clock [2/2]

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -660,6 +660,7 @@
     <string name="lockscreen_clock_selection_spectrum">Analog (Spectrum)</string>
     <string name="lockscreen_clock_selection_sneeky">Analog (Sneeky)</string>
     <string name="lockscreen_clock_selection_text">Text (Android Q)</string>
+    <string name="lockscreen_clock_selection_text_accent">Text (Android Q)(Accent)</string>
 
     <!-- Lock Date Fonts -->
     <string name="lock_date_font_title">Date font style</string>
