--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -28,12 +28,12 @@
         android:defaultValue="true" />
 
     <!-- Hardware keys -->
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+    <!--<com.ion.ionizer.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_hw_keys_toggle"
         android:title="@string/gaming_mode_hardware_keys_title"
         android:summary="@string/gaming_mode_hardware_keys_summary"
         android:dependency="gaming_mode_master_switch"
-        android:defaultValue="false" />
+        android:defaultValue="false" />-->
 
     <!-- Manual brightness -->
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
