--- a/res/xml/ion_settings_navigation.xml
+++ b/res/xml/ion_settings_navigation.xml
@@ -20,7 +20,15 @@
 
     <SwitchPreference
         android:key="navbar_visibility"
-        android:title="@string/navbar_visibility" />
+        android:title="@*android:string/disable_navkeys_title" />
+
+    <Preference
+            android:title="@string/navbar_tuner_title"
+            android:dependency="navbar_visibility" >
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.NavBarActivity" />
+    </Preference>
 
     <Preference
         android:key="gesture_settings"
@@ -29,19 +37,5 @@
         android:summary="@string/gestures_summary"
         android:fragment="com.android.settings.gestures.GestureSettings"
         settings:controller="com.android.settings.gestures.GesturesSettingPreferenceController"/>
-
-    <Preference
-            android:title="@string/navbar_tuner_title" >
-            <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.systemui"
-                android:targetClass="com.android.systemui.tuner.NavBarActivity" />
-    </Preference>
-
-    <Preference
-        android:key="button_settings"
-        android:title="@string/button_pref_title"
-        android:icon="@drawable/ic_button_settings"
-        android:summary="@string/button_setting_summary"
-        android:fragment="com.android.settings.custom.buttons.ButtonSettings" />
 
 </PreferenceScreen>
