--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -16,6 +16,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/lockscreen_title"
+    xmlns:ionionizer="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     settings:initialExpandedChildrenCount="7" >
 
@@ -62,7 +63,9 @@
             android:title="@string/lockscreen_lavalamp_speed_title"
             android:defaultValue="10000"
             android:max="30000"
-            android:min="200"
+            android:min="500"
+            ionionizer:interval="500"
+            ionionizer:unitsRight="ms"
             android:dependency="lockscreen_lavalamp_enabled"/>
 
     </PreferenceCategory>
@@ -166,6 +169,7 @@
             android:min="50"
             android:dependency="lockscreen_clock"
             android:persistent="false"
+            ionionizer:unitsRight="dp"
             android:defaultValue="64" />
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
@@ -188,6 +192,7 @@
             android:title="@string/lockdate_font_size_title"
             android:max="40"
             android:min="10"
+            ionionizer:unitsRight="dp"
             android:defaultValue="16"
             android:dependency="lockscreen_info"
             android:persistent="false" />
