--- a/res/xml/ion_settings_recents.xml
+++ b/res/xml/ion_settings_recents.xml
@@ -40,7 +40,8 @@
     <Preference
         android:key="hide_app_from_recents"
         android:title="@string/hide_apps_from_recents_title"
-        android:summary="@string/hide_apps_from_recents_summary" >
+        android:summary="@string/hide_apps_from_recents_summary"
+        settings:allowDividerAbove="true" >
              <intent android:action="android.intent.action.MAIN"
                  android:targetPackage="com.android.settings"
                  android:targetClass="com.ion.ionizer.hideappfromrecents.HAFRAppListActivity" />
