--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -16,6 +16,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/statusbar_title"
+    xmlns:ionionizer="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     settings:initialExpandedChildrenCount="6" >
 
@@ -81,15 +82,16 @@
             android:title="@string/network_traffic_autohide_threshold_title"
             android:max="10"
             android:min="0"
-            android:defaultValue="1" />
+            android:defaultValue="1"
+            ionionizer:unitsRight="sec" />
 
-        <com.ion.ionizer.preferences.CustomSeekBarPreference
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="network_traffic_refresh_interval"
             android:title="@string/network_traffic_refresh_interval_title"
             android:max="10"
             android:min="1"
             android:defaultValue="2"
-            settings:units="sec" />
+            ionionizer:unitsRight="sec" />
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="network_traffic_hidearrow"
