--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -20,11 +20,11 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
-        android:key="gaming_mode_master_switch"
+        android:key="gaming_mode_enabled"
         android:title="@string/gaming_mode_title"
         android:summary="@string/gaming_mode_summary"
         android:fragment="com.ion.ionizer.fragments.GamingMode"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
 	<Preference
         android:key="privacy_guard_manager"
