--- a/res/drawable/ic_custom_seekbar_minus.xml
+++ b/res/drawable/ic_custom_seekbar_minus.xml
@@ -1,4 +1,6 @@
-<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+     Copyright (C) 2018 crDroid Android Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -12,22 +14,12 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32.000000dp"
-    android:height="32.000000dp"
-    android:viewportWidth="96.000000"
-    android:viewportHeight="96.000000"
-    android:tint="?android:attr/colorAccent">
-
-    <group
-        android:translateY="96.000000"
-        android:scaleX="0.100000"
-        android:scaleY="-0.100000">
-        <path
-            android:fillColor="#FFFFFFFF"
-            android:strokeWidth="1"
-            android:pathData="M567 562 l-187 -187 -98 98 -98 97 -42 -43 -42 -43 139 -138 138 -138 232 227 c127
-125 231 230 230 234 0 3 -20 23 -43 43 l-42 37 -187 -187z" />
-    </group>
+        android:width="24.0dp"
+        android:height="24.0dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0" >
+    <path
+        android:fillColor="?android:attr/colorControlNormal"
+        android:pathData="M14.102040767669678,13 H0.10204076766967773 V11 H14.102040767669678 V13 z" />
 </vector>
