--- a/res/layout/preference_color_picker.xml
+++ b/res/layout/preference_color_picker.xml
@@ -21,7 +21,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="36dp"
     android:layout_marginEnd="36dp"
-    android:padding="@dimen/alert_dialog_padding_material"
+    android:padding="20dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -56,7 +56,7 @@
 
     </LinearLayout>
 
-    <net.margaritov.preference.colorpicker.ColorPickerView
+    <com.ion.ionizer.colorpicker.ColorPickerView
         android:id="@+id/color_picker_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
         android:orientation="horizontal"
         android:layout_marginBottom="10dp">
 
-        <net.margaritov.preference.colorpicker.ColorPickerPanelView
+        <com.ion.ionizer.colorpicker.ColorPickerPanelView
             android:id="@+id/old_color_panel"
             android:layout_width="0px"
             android:layout_height="fill_parent"
@@ -92,7 +92,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp" />
 
-        <net.margaritov.preference.colorpicker.ColorPickerPanelView
+        <com.ion.ionizer.colorpicker.ColorPickerPanelView
             android:id="@+id/new_color_panel"
             android:layout_width="0px"
             android:layout_height="wrap_content"
