--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 ion-OS
+<!-- Copyright (C) 2018 The Dirty Unicorns Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,16 +14,34 @@
      limitations under the License.
 -->
 <resources>
+
     <!-- Base attributes available to CustomSeekBarPreference. -->
     <declare-styleable name="CustomSeekBarPreference">
         <attr name="interval" format="integer" />
-        <attr name="min" format="integer" />
+        <attr name="showSign" format="boolean" />
         <attr name="units" format="string|reference" />
-        <attr name="defaultText" format="string|reference" />
+        <attr name="continuousUpdates" format="boolean" />
     </declare-styleable>
 
     <!-- Value to pass to callback when restore button is pressed -->
     <declare-styleable name="ColorPreference">
         <attr name="defaultColorValue" format="integer" />
     </declare-styleable>
+
+    <!-- Color Blend -->
+    <declare-styleable name="ColorBlendPreference">
+        <!-- Preference keys -->
+        <attr name="keyColorStart" format="string" />
+        <attr name="keyColorEnd" format="string" />
+        <attr name="keyBlendReverse" format="string" />
+        <!-- Default values -->
+        <attr name="defaultValueColorStart" format="color" />
+        <attr name="defaultValueColorEnd" format="color" />
+        <attr name="defaultValueBlendReverse" format="boolean" />
+        <!-- Preview strings -->
+        <attr name="previewStartText" format="string" />
+        <attr name="previewEndText" format="string" />
+        <attr name="previewBetweenText" format="string" />
+    </declare-styleable>
+
 </resources>
