--- a/res/xml/carrier_label.xml
+++ b/res/xml/carrier_label.xml
@@ -45,7 +45,7 @@
             android:entryValues="@array/lock_clock_fonts_values"
             android:defaultValue="0" />
 
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
+        <com.ion.ionizer.colorpicker.ColorPickerPreference
             android:key="status_bar_carrier_color"
             android:title="@string/status_bar_carrier_color"
             android:defaultValue="0xffffffff" />
