--- a/res/xml/ion_settings_display.xml
+++ b/res/xml/ion_settings_display.xml
@@ -34,7 +34,7 @@
             android:title="@string/corner_radius"
             android:max="80"
             android:min="0"
-            ionionizer:unitsRight="dp"
+            ionionizer:units="dp"
             android:defaultValue="0"
             android:persistent="false"
             android:dependency="sysui_rounded_fwvals" />
@@ -44,7 +44,7 @@
             android:title="@string/content_padding"
             android:max="20"
             android:min="0"
-            ionionizer:unitsRight="dp"
+            ionionizer:units="dp"
             android:defaultValue="0"
             android:persistent="false"
             android:dependency="sysui_rounded_fwvals" />
