--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -63,9 +63,9 @@
             android:title="@string/lockscreen_lavalamp_speed_title"
             android:defaultValue="10000"
             android:max="30000"
-            android:min="500"
-            ionionizer:interval="500"
-            ionionizer:unitsRight="ms"
+            settings:min="100"
+            settings:interval="100"
+            ionionizer:units="ms"
             android:dependency="lockscreen_lavalamp_enabled"/>
 
     </PreferenceCategory>
@@ -169,7 +169,7 @@
             android:min="50"
             android:dependency="lockscreen_clock"
             android:persistent="false"
-            ionionizer:unitsRight="dp"
+            ionionizer:units="dp"
             android:defaultValue="64" />
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
@@ -192,7 +192,7 @@
             android:title="@string/lockdate_font_size_title"
             android:max="40"
             android:min="10"
-            ionionizer:unitsRight="dp"
+            ionionizer:units="dp"
             android:defaultValue="16"
             android:dependency="lockscreen_info"
             android:persistent="false" />
