--- a/res/xml/ion_settings_display.xml
+++ b/res/xml/ion_settings_display.xml
@@ -51,41 +51,16 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-            android:title="@string/screen_stabilization_title"
-            android:key="screen_stabilization">
+        android:title="@string/screen_stabilization_title"
+        android:key="screen_stabilization">
 
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
             android:key="stabilization_enable"
-            android:title="@string/screen_stabilization_enable"
-            android:summary="@string/screen_stabilization_enable_summary"
+            android:title="@string/screen_stabilization_title"
+            android:summary="@string/screen_stabilization_summary"
+            android:fragment="com.ion.ionizer.fragments.DisplayStabilization"
             android:defaultValue="false" />
-	
-        <ListPreference
-            android:key="stabilization_velocity_friction"
-            android:dialogTitle="@string/stabilization_velocity_friction_title"
-            android:title="@string/stabilization_velocity_friction_title"
-            android:entries="@array/stabilization_velocity_friction_entries"
-            android:entryValues="@array/stabilization_velocity_friction_entry_values"
-            android:dependency="stabilization_enable"
-            android:persistent="false" />
 
-        <ListPreference
-            android:key="stabilization_position_friction"
-            android:dialogTitle="@string/stabilization_position_friction_title"
-            android:title="@string/stabilization_position_friction_title"
-            android:entries="@array/stabilization_position_friction_entries"
-            android:entryValues="@array/stabilization_position_friction_values"
-            android:dependency="stabilization_enable"
-            android:persistent="false" />
-	
-        <ListPreference
-            android:key="stabilization_velocity_amplitude"
-            android:dialogTitle="@string/stabilization_velocity_amplitude_title"
-            android:title="@string/stabilization_velocity_amplitude_title"
-            android:entries="@array/stabilization_velocity_amplitude_entries"
-            android:entryValues="@array/stabilization_velocity_amplitude_values"
-            android:dependency="stabilization_enable"
-            android:persistent="false" />
     </PreferenceCategory>
 
 </PreferenceScreen>
