--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -18,61 +18,30 @@
     android:title="@string/lockscreen_title"
     xmlns:ionionizer="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    settings:initialExpandedChildrenCount="7" >
+    settings:initialExpandedChildrenCount="6" >
 
     <PreferenceCategory
-        android:key="weather_lockscreen_key_two"
-        android:title="@string/weatherl_title" >
+        android:key="lock_clock_size"
+        android:title="@string/lockcsize" >
 
-        <com.ion.ionizer.preferences.SystemSettingListPreference
-            android:key="weather_lockscreen_unit"
-            android:dialogTitle="@string/weather_unit"
-            android:title="@string/weather_unit"
-            android:summary="%s"
-            android:entries="@array/weather_unit_entries"
-            android:entryValues="@array/weather_unit_values"
-            android:defaultValue="0" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="lockscreen_visualizer"
-        android:title="@string/lockscreen_visualizer_category" >
-
-        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-            android:key="lockscreen_visualizer_enabled"
-            android:title="@string/lockscreen_visualizer_enable"
-            android:summary="@string/lockscreen_visualizer_enable_summary"
-            android:defaultValue="false" />
-
-        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-            android:key="lockscreen_visualizer_autocolor"
-            android:title="@string/lockscreen_autocolor_title"
-            android:summary="@string/lockscreen_autocolor_summary"
-            android:dependency="lockscreen_visualizer_enabled"
+        <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
+            android:key="lockscreen_clock"
+            android:title="@string/lockscreen_clock_title"
+            android:summary="@string/lockscreen_clock_summary"
+            android:fragment="com.ion.ionizer.fragments.LockScreenClock"
             android:defaultValue="true" />
 
-        <com.ion.ionizer.preferences.SecureSettingSwitchPreference
-            android:key="lockscreen_lavalamp_enabled"
-            android:title="@string/lockscreen_lavalamp_title"
-            android:summary="@string/lockscreen_lavalamp_summary"
-            android:dependency="lockscreen_visualizer_enabled"
-            android:defaultValue="false" />
-
-        <com.ion.ionizer.preferences.SecureSettingSeekBarPreference
-            android:key="lockscreen_lavalamp_speed"
-            android:title="@string/lockscreen_lavalamp_speed_title"
-            android:defaultValue="10000"
-            android:max="30000"
-            settings:min="100"
-            settings:interval="100"
-            ionionizer:units="ms"
-            android:dependency="lockscreen_lavalamp_enabled"/>
+        <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
+            android:key="lockscreen_info"
+            android:title="@string/lockscreen_info_title"
+            android:summary="@string/lockscreen_info_summary"
+            android:fragment="com.ion.ionizer.fragments.LockScreenDate"
+            android:defaultValue="true" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="lock_extra"
-        android:title="@string/locktra" >
+        android:title="@string/lockscreen_media_title" >
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_media_metadata"
@@ -88,22 +57,48 @@
             android:dependency="lockscreen_media_metadata"
             android:defaultValue="0" />
 
+        <com.ion.ionizer.preferences.SecureSettingMasterSwitchPreference
+            android:key="lockscreen_visualizer_enabled"
+            android:title="@string/lockscreen_visualizer_enable"
+            android:summary="@string/lockscreen_visualizer_enable_summary"
+            android:fragment="com.ion.ionizer.fragments.LockScreenVisualizer"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="weather_lockscreen_key_two"
+        android:title="@string/weatherl_title" >
+
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="weather_lockscreen_unit"
+            android:dialogTitle="@string/weather_unit"
+            android:title="@string/weather_unit"
+            android:summary="%s"
+            android:entries="@array/weather_unit_entries"
+            android:entryValues="@array/weather_unit_values"
+            android:defaultValue="0" />
+    </PreferenceCategory>
+
+
+    <PreferenceCategory
+        android:title="@string/gesture_preference_title" >
+
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="double_tap_sleep_lockscreen"
             android:title="@string/double_tap_sleep_lockscreen_title"
             android:summary="@string/double_tap_sleep_lockscreen_sumary"
             android:defaultValue="false" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/locktra" >
+
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_battery_info"
             android:title="@string/lockscreen_battery_info_title"
             android:summary="@string/lockscreen_battery_info_summary"
-            android:defaultValue="true" />
-
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="lockscreen_pin_ripple"
-            android:title="@string/lockscreen_pin_ripple_title"
-            android:summary="@string/lockscreen_pin_ripple_summary"
             android:defaultValue="true" />
 
         <Preference
@@ -114,88 +109,34 @@
                 android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
         </Preference>
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/lockscreen_unl" >
+
         <SwitchPreference
             android:key="fingerprint_success_vib"
             android:title="@string/fprint_sucess_vib_title"
             android:summary="@string/fprint_sucess_vib_summary"
-            android:persistent="false"
-            settings:allowDividerAbove="true"/>
+            android:persistent="false"/>
 		
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference  
+            android:key="fp_unlock_keystore" 
+            android:title="@string/fp_unlock_keystore_title" 
+            android:summary="@string/fp_unlock_keystore_summary" 
+            android:defaultValue="false" />
+
         <com.ion.ionizer.preferences.SecureSettingSwitchPreference
             android:key="status_bar_locked_on_secure_keyguard"
             android:title="@string/block_on_secure_keyguard_title"
             android:summary="@string/block_on_secure_keyguard_summary"
             android:defaultValue="false"/>
 
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference  
-            android:key="fp_unlock_keystore" 
-            android:title="@string/fp_unlock_keystore_title" 
-            android:summary="@string/fp_unlock_keystore_summary" 
-            android:defaultValue="false" /> 
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="lock_clock_size"
-        android:title="@string/lockcsize" >
-
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="lockscreen_clock"
-            android:title="@string/lockscreen_clock_title"
-            android:summary="@string/lockscreen_clock_summary"
+            android:key="lockscreen_pin_ripple"
+            android:title="@string/lockscreen_pin_ripple_title"
+            android:summary="@string/lockscreen_pin_ripple_summary"
             android:defaultValue="true" />
-
-        <com.ion.ionizer.preferences.SystemSettingListPreference
-            android:key="lockscreen_clock_selection"
-            android:title="@string/lockscreen_clock_selection_title"
-            android:entries="@array/lockscreen_clock_selection_entries"
-            android:entryValues="@array/lockscreen_clock_selection_values"
-            android:dependency="lockscreen_clock"
-            android:defaultValue="0" />
-
-        <com.ion.ionizer.preferences.SystemSettingListPreference
-            android:key="lock_clock_fonts"
-            android:title="@string/lock_clock_font_title"
-            android:entries="@array/lock_clock_fonts_entries"
-            android:entryValues="@array/lock_clock_fonts_values"
-            android:dependency="lockscreen_clock"
-            android:defaultValue="0"
-            android:persistent="false" />
-
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="lockclock_font_size"
-            android:title="@string/lockclock_font_size_title"
-            android:max="120"
-            android:min="50"
-            android:dependency="lockscreen_clock"
-            android:persistent="false"
-            ionionizer:units="dp"
-            android:defaultValue="64" />
-
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="lockscreen_info"
-            android:title="@string/lockscreen_info_title"
-            android:summary="@string/lockscreen_info_summary"
-            android:defaultValue="true" />
-
-        <com.ion.ionizer.preferences.SystemSettingListPreference
-            android:key="lock_date_fonts"
-            android:title="@string/lock_date_font_title"
-            android:entries="@array/lock_clock_fonts_entries"
-            android:entryValues="@array/lock_clock_fonts_values"
-            android:dependency="lockscreen_info"
-            android:defaultValue="0"
-            android:persistent="false" />
-
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="lockdate_font_size"
-            android:title="@string/lockdate_font_size_title"
-            android:max="40"
-            android:min="10"
-            ionionizer:units="dp"
-            android:defaultValue="16"
-            android:dependency="lockscreen_info"
-            android:persistent="false" />
 
     </PreferenceCategory>
 
