--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -20,8 +20,8 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     settings:initialExpandedChildrenCount="6" >
 
-    <Preference
-        android:key="status_bar_clock_settings"
+    <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
+        android:key="status_bar_clock"
         android:fragment="com.ion.ionizer.fragments.StatusbarClockSettings" 
         android:title="@string/status_bar_clock_title"
         android:summary="@string/status_bar_clock_summary" />
@@ -46,17 +46,36 @@
         android:summary="@string/carrier_label_category_summary"
         android:fragment="com.ion.ionizer.fragments.CarrierLabelSettings" />
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="status_bar_brightness_control"
-        android:title="@string/status_bar_toggle_brightness"
-        android:summary="@string/status_bar_toggle_brightness_summary"
-        android:defaultValue="false" />
+    <PreferenceCategory 
+        android:key="status_icons"
+        android:title="@string/status_icons_title">
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="double_tap_sleep_gesture"
-        android:title="@string/double_tap_sleep_gesture_title"
-        android:summary="@string/double_tap_sleep_gesture_summary"
-        android:defaultValue="false" />
+        <Preference
+            android:title="@string/statusbar_items_title" >
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity"/>
+        </Preference>
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="use_old_mobiletype"
+            android:title="@string/use_old_mobiletype_title"
+            android:summary="@string/use_old_mobiletype_summary"
+            android:defaultValue="false"/>
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="show_fourg_icon"
+            android:title="@string/show_fourg_icon_title"
+            android:summary="@string/show_fourg_icon_summary"
+            android:defaultValue="false"/>
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="volte_icon"
+            android:title="@string/volte_icon_title"
+            android:summary="@string/volte_icon_summary"
+            android:defaultValue="true"/>
+
+    </PreferenceCategory>
 
     <PreferenceCategory 
         android:key="traffic_category" 
@@ -101,47 +120,35 @@
 
     </PreferenceCategory>
 
-    <Preference
-        android:title="@string/statusbar_items_title"
-        settings:allowDividerAbove="true" >
-        <intent android:action="android.intent.action.MAIN"
-            android:targetPackage="com.android.systemui"
-            android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
-    </Preference>
+    <PreferenceCategory 
+        android:key="status_gestures" 
+        android:title="@string/gesture_preference_title">
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="use_old_mobiletype"
-        android:title="@string/use_old_mobiletype_title"
-        android:summary="@string/use_old_mobiletype_summary"
-        android:defaultValue="false"
-        settings:allowDividerAbove="true"/>
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_brightness_control"
+            android:title="@string/status_bar_toggle_brightness"
+            android:summary="@string/status_bar_toggle_brightness_summary"
+            android:defaultValue="false"/>
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="show_fourg_icon"
-        android:title="@string/show_fourg_icon_title"
-        android:summary="@string/show_fourg_icon_summary"
-        android:defaultValue="false"/>
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_sleep_gesture_title"
+            android:summary="@string/double_tap_sleep_gesture_summary"
+            android:defaultValue="false"/>
 
-    <ListPreference
-        android:key="quick_pulldown"
-        android:title="@string/quick_pulldown_title"
-        android:entries="@array/quick_pulldown_entries"
-        android:entryValues="@array/quick_pulldown_values"
-        android:persistent="false"
-        settings:allowDividerAbove="true"/>
+        <ListPreference
+            android:key="quick_pulldown"
+            android:title="@string/quick_pulldown_title"
+            android:entries="@array/quick_pulldown_entries"
+            android:entryValues="@array/quick_pulldown_values"
+            android:persistent="false"/>
 
-    <ListPreference
-        android:key="smart_pulldown"
-        android:title="@string/smart_pulldown_title"
-        android:entries="@array/smart_pulldown_entries"
-        android:entryValues="@array/smart_pulldown_values"
-        android:persistent="false" />
+        <ListPreference
+            android:key="smart_pulldown"
+            android:title="@string/smart_pulldown_title"
+            android:entries="@array/smart_pulldown_entries"
+            android:entryValues="@array/smart_pulldown_values"
+            android:persistent="false"/>
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="volte_icon"
-        android:title="@string/volte_icon_title"
-        android:summary="@string/volte_icon_summary"
-        android:defaultValue="true"
-        settings:allowDividerAbove="true"/>
-
+    </PreferenceCategory>
 </PreferenceScreen>
