--- a/res/xml/statusbar_clock_settings.xml
+++ b/res/xml/statusbar_clock_settings.xml
@@ -21,32 +21,24 @@
     <PreferenceCategory
         android:key="clock_cat"
         android:title="@string/clock_cat">
-		
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="status_bar_clock"
-        android:title="@string/status_bar_clock_show"
-        android:defaultValue="true" />
 
     <ListPreference
         android:key="statusbar_clock_style"
         android:title="@string/status_bar_clock_style_title"
         android:dialogTitle="@string/status_bar_clock_style_title"
         android:entries="@array/status_bar_clock_style_entries"
-        android:entryValues="@array/status_bar_clock_style_values"
-        android:dependency="status_bar_clock" />
+        android:entryValues="@array/status_bar_clock_style_values" />
 
     <ListPreference
         android:key="status_bar_am_pm"
         android:title="@string/status_bar_am_pm_title"
         android:dialogTitle="@string/status_bar_am_pm_title"
         android:entries="@array/status_bar_am_pm_entries"
-        android:entryValues="@array/status_bar_am_pm_values"
-        android:dependency="status_bar_clock" />
+        android:entryValues="@array/status_bar_am_pm_values" />
 
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
         android:key="status_bar_clock_seconds"
         android:title="@string/clock_seconds_display"
-        android:dependency="status_bar_clock"
         android:defaultValue="false" />
 
     <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
@@ -66,8 +58,7 @@
     <com.ion.ionizer.colorpicker.ColorPickerPreference
         android:key="status_bar_clock_color"
         android:title="@string/status_bar_clock_color_title"
-        android:defaultValue="0xffffffff"
-        android:dependency="status_bar_clock" />
+        android:defaultValue="0xffffffff" />
 
     </PreferenceCategory>
 
@@ -80,8 +71,7 @@
         android:title="@string/clock_date_display"
         android:summary="@string/clock_date_display_summary"
         android:entries="@array/clock_date_display_entries"
-        android:entryValues="@array/clock_date_display_values"
-        android:dependency="status_bar_clock" />
+        android:entryValues="@array/clock_date_display_values" />
 
     <ListPreference
         android:key="statusbar_clock_date_position"
