--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -564,6 +564,7 @@
     <!-- QS tile styles -->
     <string name="qs_tile_style_title">QS Tile Style</string>
     <string name="qstile_default">Default</string>
+    <string name="qstile_circle">Circle</string>
     <string name="qstile_circle_gradient">Circle (Gradient)</string>
     <string name="qstile_circle_trim">Circle (Trim)</string>
     <string name="qstile_cookie">Cookie</string>
